--- a/src/app/pages/ingresosAnuales/ingresos.component.html
+++ b/src/app/pages/ingresosAnuales/ingresos.component.html
@@ -223,7 +223,7 @@
               </dxo-summary>
       
               <div *dxTemplate="let data of 'headerTemplate'">
-                  <div style="font-weight: bolder; color: black">
+                  <div style="font-weight: bolder; color: black;">
                       {{ data.column.caption }}
                   </div>
               </div>
