--- a/src/app/pages/ingresosAnuales/ingresos.component.html
+++ b/src/app/pages/ingresosAnuales/ingresos.component.html
@@ -1,7 +1,6 @@
 <h2 class="content-block">Ingresos Anuales</h2>
 <div [id]="'myDiv'" class="content-block dx-card responsive-paddings">
-    <div>
-        <!--#region :::: FORM DE CAPUTURA :::: -->
+    <!-- <div>
         <div class="dx-field">
             <div class="dx-field-label" style="width: 10%;">Año</div>
             <div class="dx-field-value" style="width: 20%;">
@@ -27,7 +26,7 @@
 
         </div>
     </div>
-    <br>
+    <br> -->
 
     <div>
 
