actualizacion grafica ingreso

--- a/src/app/pages/ingresosAnuales/ingresos.component.html
+++ b/src/app/pages/ingresosAnuales/ingresos.component.html
@@ -37,7 +37,7 @@
             <!--==========================Bar and Line Chart==================-->
             <dx-chart id="chart" [dataSource]="graficaModel">
 
-                <dxi-series argumentField="mes" valueField="total" name="Total" type="bar" color="#363640">
+                <dxi-series argumentField="mes" valueField="total" name="Ingreso" type="bar" color="#363640">
                     <dxo-label [visible]="true" [format]="formatSliderTooltip" position="inside">
                         <dxo-font size="9"></dxo-font>
                     </dxo-label>
