actualizacion grafica ingreso

--- a/src/app/pages/ingresosAnuales/ingresos.component.html
+++ b/src/app/pages/ingresosAnuales/ingresos.component.html
@@ -51,7 +51,7 @@
                 </dxi-series>
                 
                 <dxo-title text="Ingreso">
-                    <dxo-subtitle text="(Mensual)"> </dxo-subtitle>
+                    <dxo-subtitle text="(Anual)"> </dxo-subtitle>
                 </dxo-title>
 
                 <dxo-export [enabled]="true"></dxo-export>
