--- a/src/app/pages/ingresosAnuales/ingresos.component.html
+++ b/src/app/pages/ingresosAnuales/ingresos.component.html
@@ -1,25 +1,10 @@
 <h2 class="content-block">Ingresos Anuales</h2>
 <div [id]="'myDiv'" class="content-block dx-card responsive-paddings">
     <div>
+
         <div class="dx-field">
-            <!-- <div class="dx-field-label" style="width: 10%;">Año</div>
-            <div class="dx-field-value" style="width: 20%;">
-                <dx-select-box [items]="anios" displayExpr="anio" valueExpr="idAnio" (onValueChanged)="seleccionarAnio($event)">
-                </dx-select-box>
-            </div>
-
-            <div class="dx-field-label" style="width: 5%;"></div>
-
-            <div class="dx-field-label" style="width: 20%;">Unidad de negocio</div>
-            <div class="dx-field-value" style="width: 60%;">
-                <dx-drop-down-box [(value)]="treeBoxValue" [(opened)]="isTreeBoxOpened" valueExpr="ID" displayExpr="name" placeholder="Selecciona un valor..." [showClearButton]="true" [dataSource]="treeDataSource" (onOptionChanged)="onTreeBoxOptionChanged($event)">
-                    <div *dxTemplate="let data of 'content'">
-                        <dx-tree-view [dataSource]="treeDataSource" dataStructure="plain" keyExpr="ID" parentIdExpr="categoryId" selectionMode="single" displayExpr="name" [selectByClick]="true" (onItemSelectionChanged)="treeView_itemSelectionChanged($event)">
-                        </dx-tree-view>
-                    </div>
-                </dx-drop-down-box>
-            </div> -->
-            <div class="dx-field-value" style="width: 20%;">
+            
+            <div class="dx-field-value d-block mr-0 ml-auto" style="width: 20%;" >
                 <dx-button stylingMode="contained" text="Actualizar" icon="refresh" type="normal" [width]="240" (onClick)="clickClientesRutas($event)">
                 </dx-button>
             </div>
@@ -30,8 +15,6 @@
 
     <div>
 
-        <dx-tab-panel>
-            <dxi-item title=Ingresos>
                 <br><br>
 
             <!--==========================Bar and Line Chart==================-->
@@ -265,8 +248,6 @@
               <dxo-sorting mode="none"></dxo-sorting>
           </dx-data-grid>
               
-            </dxi-item>
-        </dx-tab-panel>
     </div>
 
 
