--- a/src/app/pages/ingresosAnuales/ingresos.component.scss
+++ b/src/app/pages/ingresosAnuales/ingresos.component.scss
@@ -29,3 +29,8 @@
 .cls > td {  
   background-color: red!important;  
 }
+
+.border { border: 2px blue dashed; } 
+.mr-0 { margin-right: 0; } 
+.ml-auto { margin-left:auto; } 
+.d-block { display:block; }
