--- a/src/app/pages/ingresosAnuales/ingresos.component.scss
+++ b/src/app/pages/ingresosAnuales/ingresos.component.scss
@@ -34,3 +34,8 @@
 .mr-0 { margin-right: 0; } 
 .ml-auto { margin-left:auto; } 
 .d-block { display:block; }
+
+::ng-deep #exportContainer {
+  text-align: right;
+}
+
